Convert PX in vw, vh and add HomeComponent

--- a/src/components/AppBarGeneric/styles.module.scss
+++ b/src/components/AppBarGeneric/styles.module.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     align-items: center;
     justify-content: start;
-    margin-left: 20px;
+    margin-left: 40px;
     height: 6vw;
 }
 
@@ -26,4 +26,5 @@
     font-weight: 600;
     cursor: pointer;
     font-size: larger;
+    text-shadow: 2px 2px 10px black;
 }
