--- a/src/components/AppBarGeneric/styles.module.scss
+++ b/src/components/AppBarGeneric/styles.module.scss
@@ -1,15 +1,30 @@
 .appbar{
     position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 6vw;
+}
+
+.contents{
+    position: absolute;
+    width: 95%;
     z-index: 0;
     display: flex;
     flex-direction: row;
     overflow: hidden;
     align-items: center;
-    justify-content: start;
-    margin-left: 40px;
+    justify-content: space-between;
     height: 6vw;
 }
 
+.options{
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    align-items: center;
+    justify-content: start;
+}
 .ul{
     display: flex;
     flex-direction: row;
@@ -28,4 +43,22 @@
     font-size: larger;
     text-shadow: 2px 2px 10px black;
     opacity: 0;
+}
+
+.boxsocial{
+    display: flex;
+    flex-direction: row;
+    gap:1.5vw;
+    text-shadow: 2px 2px 10px black;
+}
+
+.socialmedia{
+    display: flex;
+    font-size: large;
+    align-items: center;
+    color: white;
+
+    span{
+        margin-right: 0.5vw;
+    }
 }
