Change video from home page to main.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,11 @@
 body{
   margin: 0px;
 }
+
+.video-fundo{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  object-fit: cover;
+  z-index: -1;
+}
