--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -32,7 +32,6 @@
 }
 
 .textContent {
-  align-self: stretch;
   display: flex;
   min-width: 12vw; /* 240px convertido */
   flex-direction: column;
@@ -47,12 +46,14 @@
 .mainHeading {
   font-size: 2.5vw; /* 48px convertido */
   margin-top: 2vh; /* 20px convertido */
-  margin-bottom: 1vh; /* 10px convertido */
+  margin-bottom: 2.2vh; /* 10px convertido */
 }
 
 .description {
   font-size: 1vw; /* 20px convertido */
   font-weight: bold;
+  margin-bottom: 3vh;
+  margin-top: 0;
   text-shadow: 0.1vw 0.1vw 0.5vw black; /* sombras convertidas */
 }
 
