--- a/src/pages/Sobre/styles.module.scss
+++ b/src/pages/Sobre/styles.module.scss
@@ -22,24 +22,38 @@
 .contentWrapper {
   z-index: 0;
   display: flex;
-  min-width: 12vw; /* 240px convertido aproximadamente */
+  flex-direction: column; /* 240px convertido aproximadamente */
   align-items: center;
-  gap: 0.5vw; /* 10px convertido */
+  gap: 2vh; /* 10px convertido */
   justify-content: start;
   flex-wrap: wrap;
-  margin: auto 0;
-  padding: 8vh 2vw; /* 80px e 37px convertidos */
+  margin: auto 0;/* 80px e 37px convertidos */
+}
+
+.sobreMenu{
+  font-size: large;
+  color: #ffffff;
+  font-weight: 600;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  list-style: none;
+
+  li{
+    cursor: pointer;
+
+  }
 }
 
 .textContent {
-  display: flex;
-  min-width: 12vw; /* 240px convertido */
-  flex-direction: column;
+  display: flex; /* 240px convertido */
+  flex-direction: row;
+  align-items: center;
   font-family: Inter, sans-serif;
   color: #ffffff;
   font-weight: 700;
   justify-content: start;
-  width: 48.65vw; /* 973px convertido */
+  width: 65vw; /* 973px convertido */
   margin: auto 0;
 }
 
@@ -55,6 +69,16 @@
   margin-bottom: 3vh;
   margin-top: 0;
   text-shadow: 0.1vw 0.1vw 0.5vw black; /* sombras convertidas */
+}
+
+.boxtext{
+  width: fit-content;
+}
+
+.video{
+  width: 10%;
+  height: 10%;
+  display: block;
 }
 
 .iconWrapper {
