--- a/src/pages/Sobre/styles.module.scss
+++ b/src/pages/Sobre/styles.module.scss
@@ -24,7 +24,7 @@
   display: flex;
   flex-direction: column; /* 240px convertido aproximadamente */
   align-items: center;
-  gap: 2vh; /* 10px convertido */
+  gap: 2.5vh; /* 10px convertido */
   justify-content: start;
   flex-wrap: wrap;
   margin: auto 0;/* 80px e 37px convertidos */
@@ -40,6 +40,7 @@
   list-style: none;
 
   li{
+    font-size: 1.1vmax;
     cursor: pointer;
 
   }
@@ -55,6 +56,7 @@
   justify-content: start;
   width: 65vw; /* 973px convertido */
   margin: auto 0;
+  gap: 2vw;
 }
 
 .mainHeading {
@@ -66,9 +68,16 @@
 .description {
   font-size: 1vw; /* 20px convertido */
   font-weight: bold;
-  margin-bottom: 3vh;
+  margin-bottom: 0px;
+  text-align: justify;
   margin-top: 0;
   text-shadow: 0.1vw 0.1vw 0.5vw black; /* sombras convertidas */
+}
+
+.boxDescriptions{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .boxtext{
