--- a/src/pages/Sobre/styles.module.scss
+++ b/src/pages/Sobre/styles.module.scss
@@ -36,7 +36,7 @@
   font-weight: 600;
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 3vw;
   list-style: none;
 
   li{
@@ -54,7 +54,6 @@
   color: #ffffff;
   font-weight: 700;
   justify-content: start;
-  width: 65vw; /* 973px convertido */
   margin: auto 0;
   gap: 2vw;
 }
@@ -81,7 +80,11 @@
 }
 
 .boxtext{
-  width: fit-content;
+  height: 100%;
+  width: 30vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .video{
