--- a/src/components/Front/styles.module.scss
+++ b/src/components/Front/styles.module.scss
@@ -1,11 +1,9 @@
-.appbar{
+.front{
     position: absolute;
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 6vw;
-    height: 100%;
-    left: 30px;
+    width: 100%;
+    height: 6vw;
 }
 
 .contents{
@@ -13,30 +11,32 @@
     width: 95%;
     z-index: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     overflow: hidden;
     align-items: center;
+    justify-content: space-between;
+    height: 6vw;
 }
 
 .options{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     overflow: hidden;
     align-items: center;
     justify-content: start;
 }
 .ul{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     list-style-type: none;
     align-items: center;
     justify-content: center;
     padding: 0px;
-    gap: 2vh;
     color: white;
 }
 
 .li{
+    margin-left: 30px;
     text-transform: uppercase;
     font-weight: 600;
     cursor: pointer;
