--- a/src/components/PlanCard/PlanCard.module.scss
+++ b/src/components/PlanCard/PlanCard.module.scss
@@ -1,6 +1,7 @@
+
 .planCard {
   background: #fff;
-  color: #333;
+  color: #FF7B00;
   border-radius: 1vmax; /* Substitui 16px por uma medida escalável */
   box-shadow: 0px 0.5vmax 1.5vmax rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -21,7 +22,7 @@
 }
 
 .header {
-  background: #333;
+  background: #FF7B00;
   padding: 1.8vmax;
   font-size: 1.2vmax;
   font-weight: bold;
@@ -59,7 +60,7 @@
 
 .button {
   width: fit-content;
-  background: #333;
+  background: #FF7B00;
   color: #fff;
   font-size: 0.8vmax;
   padding: 1vh 2vw;
