--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -15,6 +15,21 @@
   
   .loading-text {
     color: #fff;
-    font-size: 2vmax;
+    margin:0;
+    font-size: 4vmax;
   }
-  
+
+.loading-titles{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 4vh;
+
+  p{
+    margin: 0;
+    font-size: 1.5vmax;
+    color: #fff;
+    font-weight: 900;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+}
