--- a/src/pages/Sobre/styles.module.scss
+++ b/src/pages/Sobre/styles.module.scss
@@ -60,13 +60,13 @@
 
 .mainHeading {
   font-size: 2.5vw; /* 48px convertido */
-  margin-top: 2vh; /* 20px convertido */
-  margin-bottom: 2.2vh; /* 10px convertido */
+  margin-top: 0; /* 20px convertido */
+  margin-bottom: 0;
 }
 
 .description {
   font-size: 1vw; /* 20px convertido */
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom: 0px;
   text-align: justify;
   margin-top: 0;
@@ -115,4 +115,13 @@
   justify-content: start;
   height: 5vw; /* 100px convertido */
   padding: 2vh 1.7vw; /* 20px e 33px convertidos */
+}
+
+.titles{
+  p{
+    margin: 0;
+    font-weight: 500;
+    font-size: 1.4vw;
+  }
+  margin-bottom: 2.5vh;
 }
