--- a/src/components/BoxGeneric/styles.module.scss
+++ b/src/components/BoxGeneric/styles.module.scss
@@ -1,8 +1,19 @@
-.box{
+@media (min-width:720px) {
+    .box{
         width: 100%;
         height: 100vh;
         display: flex;
         align-items: center;
         overflow: hidden;
         justify-content: center;
-    }
+    }   
+}
+
+@media (max-width:720px) {
+    .box{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }   
+}
