--- a/src/pages/Home/stylesMobile.module.scss
+++ b/src/pages/Home/stylesMobile.module.scss
@@ -2,15 +2,20 @@
     display: flex;
     flex-direction: column;
     gap: 0px;
-
-
 }
-.firstbox{
-    width: fit-content;
-    padding: 0px 30px 0px 30px;
+
+.backgroundFirstBox{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 9%);
     height: 110vh;
+}
+
+.firstbox{
+    width: fit-content;
+    padding: 0px 30px 0px 30px;
 
 }
 
