--- a/src/pages/Home/stylesMobile.module.scss
+++ b/src/pages/Home/stylesMobile.module.scss
@@ -1,3 +1,5 @@
+@import '../../variables/colors';
+
 .home{
     display: flex;
     flex-direction: column;
@@ -19,6 +21,10 @@
 
 }
 
+h1,h2,h3,h4,h5,h6{
+    margin: 0px;
+}
+
 .FirstboxText{
     display: flex;
     flex-direction: column;
@@ -29,12 +35,36 @@
     color: white;
 
     h1{
-        font-size: 	40px;
+        font-size: 	11.1627906977vw;
         text-align: center;
-        margin: 0px;
     }
     p{
         text-align: center;
         width: fit-content;
+    }
+}
+
+
+.box{
+    display: flex;
+    padding: 50px 30px 50px 30px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
+
+.boxText{
+    display: flex;
+    flex-direction: column;
+
+    h2{
+        font-size: 9.3023255814vw;
+        color: $color_primary;
+    }
+    p{
+        line-height: 100%;
+        font-size: 20px;
+        font-weight: 600;
+        color: $color_text_second;
     }
 }
