--- a/src/pages/Home/stylesMobile.module.scss
+++ b/src/pages/Home/stylesMobile.module.scss
@@ -81,6 +81,7 @@ h1,h2,h3,h4,h5,h6{
     flex-direction: row;
     align-items: center;
     gap: 20px;
+    padding: 10px 12px 10px 12px;
 }
 
 .cardText{
