--- a/src/components/PlanCard/PlanCard.module.scss
+++ b/src/components/PlanCard/PlanCard.module.scss
@@ -6,8 +6,7 @@
   box-shadow: 0px 0.5vmax 1.5vmax rgba(0, 0, 0, 0.2);
   overflow: hidden;
   width: 15vw;
-  max-width: 20vmax; /* Limita a largura do card */
-  height: 50vh; /* Define a altura fixa em proporção ao viewport */
+  height: 50vh;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -73,4 +72,30 @@
   &:hover {
     background: #111;
   }
+}
+
+@media (max-width: 1024px) {
+    .planCard {
+        width: 80vw;
+    }
+    .header{
+        padding: 3.5vmax;
+        font-size: 3vmax;
+    }
+    .price{
+        font-size: 2.5vmax;
+    }
+    .bandwidth{
+        font-size: 2.8vmax;
+    }
+    .feature{
+        font-size: 2vmax;
+    }
+    .button{
+        width: 100%;
+        border-radius: 0;
+        margin: 0;
+        font-size: 2vmax;
+        padding: 2vh 4vw;
+    }
 }
