--- a/src/pages/Planos/styles.module.scss
+++ b/src/pages/Planos/styles.module.scss
@@ -59,4 +59,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  backdrop-filter: blur(5px);
+width: 100vw; /* 973px convertido */
 }
