--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -29,6 +29,7 @@
     margin: auto 0;
     padding: 8vh 2vw; /* 80px e 37px convertidos */
     backdrop-filter: blur(5px);
+    background-color: #00000049;
     width: 100vw; /* 973px convertido */
   }
   
