--- a/src/pages/Sobre/styles.module.scss
+++ b/src/pages/Sobre/styles.module.scss
@@ -27,6 +27,7 @@
   align-items: center;
   gap: 2.5vh; /* 10px convertido */
   justify-content: start;
+  background-color: #00000049;
   flex-wrap: wrap;
   margin: auto 0;/* 80px e 37px convertidos */
   backdrop-filter: blur(5px);
