--- a/src/pages/Planos/styles.module.scss
+++ b/src/pages/Planos/styles.module.scss
@@ -14,8 +14,9 @@
   display: flex;
   flex-direction: column; /* 240px convertido aproximadamente */
   align-items: center;
-  gap: 2.5vh; /* 10px convertido */
   justify-content: start;
+  gap: 2.5vh; /* 10px convertido */
+  margin: auto;
   flex-wrap: wrap;
   margin: auto 0;/* 80px e 37px convertidos */
 }
@@ -60,5 +61,6 @@
   flex-direction: column;
   align-items: center;
   backdrop-filter: blur(5px);
+  background-color: #00000049;
 width: 100vw; /* 973px convertido */
 }
