--- a/src/components/AppBarGeneric/styles.module.scss
+++ b/src/components/AppBarGeneric/styles.module.scss
@@ -32,7 +32,7 @@
     list-style-type: none;
     align-items: center;
     justify-content: center;
-    padding: 0px;
+    padding: 0px 0.5vw;
     color: white;
 }
 
