--- a/src/components/ContactGeneric/styles.module.scss
+++ b/src/components/ContactGeneric/styles.module.scss
@@ -155,3 +155,27 @@
     font-size: 1.81vw;
     font-weight: 600;
 }
+
+.itemform2{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 0.5vh;
+
+    span{
+        font-size: 1vw;
+        font-weight: 600;
+    }
+
+    textarea{
+        height: 5vw;
+        padding: 0.6vw 0.5vw;
+        border: none;
+        box-shadow: 2px ;
+        -webkit-box-shadow: inset 0px 0px 13px 0px rgba(0,0,0,0.23);
+        -moz-box-shadow: inset 0px 0px 13px 0px rgba(0,0,0,0.23);
+        box-shadow: inset 0px 0px 13px 0px rgba(0,0,0,0.23);
+        border-radius: 5px;
+    }
+}
+
