--- a/src/pages/Home/stylesMobile.module.scss
+++ b/src/pages/Home/stylesMobile.module.scss
@@ -17,7 +17,7 @@
 
 .firstbox{
     width: fit-content;
-    padding: 0px 30px 0px 30px;
+    padding: 0px 7.6vw 0px 7.6vw;
 
 }
 
@@ -31,7 +31,7 @@ h1,h2,h3,h4,h5,h6{
     width: fit-content;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 5.1vw;
     color: white;
 
     h1{
@@ -39,6 +39,7 @@ h1,h2,h3,h4,h5,h6{
         text-align: center;
     }
     p{
+        font-size: 4.1vw;
         text-align: center;
         width: fit-content;
     }
@@ -64,7 +65,7 @@ h1,h2,h3,h4,h5,h6{
     }
     p{
         line-height: 100%;
-        font-size: 20px;
+        font-size: 5.1vw;
         font-weight: 600;
         color: $color_text_second;
     }
