Edit page Sobre switch

--- a/src/components/ContactGeneric/styles.module.scss
+++ b/src/components/ContactGeneric/styles.module.scss
@@ -121,7 +121,8 @@
     gap: 0.5vh;
 
     span{
-        font-size: 1vw;
+        font-size: 0.7vw;
+        color: $color_text_second;
         font-weight: 600;
     }
 
@@ -163,7 +164,8 @@
     gap: 0.5vh;
 
     span{
-        font-size: 1vw;
+        font-size: 0.7vw;
+        color: $color_text_second;
         font-weight: 600;
     }
 
