--- a/src/pages/Home/stylesMobile.module.scss
+++ b/src/pages/Home/stylesMobile.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 0px;
+    overflow: hidden;
 }
 
 .backgroundFirstBox{
@@ -13,6 +14,7 @@
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 9%);
     height: 110vh;
+    overflow: hidden;
 }
 
 .firstbox{
@@ -103,5 +105,33 @@ h1,h2,h3,h4,h5,h6{
     .home{
 
         display: none;
+    }
+}
+
+.imagefundo{
+    position: absolute;
+    z-index: 0;
+    overflow: hidden;
+    bottom: 0px;
+}
+
+.buttontitles{
+    display: flex;
+    flex-direction: row;
+    gap: 3vw;
+    align-items: center;
+    padding: 4vw 6vh;
+    justify-content: center;
+    text-transform: none;
+    text-decoration: none;
+    color: white;
+    background-color: $color_primary;
+    border-radius: 20px;
+
+    span{
+        color: white;
+        font-weight: 600;
+        text-decoration: solid;
+        font-size: 5vw;
     }
 }
