Cards de planos editados

--- a/src/components/PlanCard/PlanCard.module.scss
+++ b/src/components/PlanCard/PlanCard.module.scss
@@ -2,12 +2,11 @@
 .planCard {
   color: #FF7B00; /* Substitui 16px por uma medida escalável */
   box-shadow: 0px 0.5vmax 1.5vmax rgba(0, 0, 0, 0.2);
-  overflow: hidden;
   width: 18vw;
   height: 55vh;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: start;
   transition: transform 0.3s, box-shadow 0.3s;
   font-size: 15px;
   cursor: pointer;
@@ -15,7 +14,6 @@
 
   &:hover {
     transform: translateY(-1vmax);
-    background-color: #0000002a;
   }
 }
 
@@ -42,12 +40,15 @@
 
 .features{
     object-fit: contain;
-    width: 100%;
-    margin-top: 2vh;
+    width: 80%;
+    align-self: center;
+    margin-bottom: 3vh;
+
+
 }
 
 .header{
-    background-color: #0000003f;
+    height: 100%; 
     padding: 1.5vw;
 
     .fibra{
@@ -69,6 +70,23 @@
         text-shadow: 0px 0px 20px #000000;
     }
 
+}
+
+.option{
+    display: flex;
+    align-items: center;
+    gap: 0.5vw;
+    span{
+
+        font-size: 1vw;
+    }
+    color: #ffffff;
+    margin-top: 1vh;
+}
+
+.options{
+    margin-top: 2vh;
+    margin-left: 1vw;
 }
 
 @media (max-width: 1024px) {
