--- a/src/components/PlanCard/PlanCard.module.scss
+++ b/src/components/PlanCard/PlanCard.module.scss
@@ -4,6 +4,7 @@
   box-shadow: 0px 0.5vmax 1.5vmax rgba(0, 0, 0, 0.2);
   width: 18vw;
   height: 55vh;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -100,6 +101,25 @@
     .header{
         padding: 3.5vmax;
         font-size: 3vmax;
+
+        .fibra{
+            font-size: 4vw;
+            font-weight: 600;
+            text-shadow: 0px 0px 20px #000000;
+        }
+    
+        h2{
+            font-size: 7vw;
+            color: #ffffff;
+            text-shadow: 0px 0px 20px #000000;
+        }
+    
+        span{
+            color: rgb(255, 255, 255);
+            font-size: 5vw;
+            font-weight: 600;
+            text-shadow: 0px 0px 20px #000000;
+        }
     }
     .button{
         width: 100%;
