--- a/src/pages/Home/stylesMobile.module.scss
+++ b/src/pages/Home/stylesMobile.module.scss
@@ -47,6 +47,11 @@ h1,h2,h3,h4,h5,h6{
         width: fit-content;
     }
 }
+.iconwhat{
+    position:fixed;
+    bottom: 7vw;
+    right: 7vw;
+}
 
 
 .box{
