--- a/src/components/MobileNavbar/styles.module.scss
+++ b/src/components/MobileNavbar/styles.module.scss
@@ -12,6 +12,10 @@
     z-index: 1;
 }
 
+.link{
+    text-decoration: none;
+}
+
 .navcontent{
     display:flex;
     justify-content: space-between;
