--- a/src/components/Front/styles.module.scss
+++ b/src/components/Front/styles.module.scss
@@ -50,13 +50,14 @@
     display: flex;
     flex-direction: row;
     gap:1.5vw;
-    text-shadow: 2px 2px 10px black;
+    text-shadow: 2px 2px 5px black;
 }
 
 .socialmedia{
     display: flex;
     font-size: 1vmax;
-    align-items:end;
+    align-items:center;
+    justify-content: center;
     color: white;
     width: fit-content;
     cursor: pointer;
