--- a/src/components/PlanCard/PlanCard.module.scss
+++ b/src/components/PlanCard/PlanCard.module.scss
@@ -26,6 +26,7 @@
     z-index: -1;
     filter: blur(1px);
     border-radius: 1vmax;
+    opacity: 0.95;
 }
 
 .assets{
@@ -53,13 +54,14 @@
     padding: 1.5vw;
 
     .fibra{
-        font-size: 1vw;
+        font-size: 0.8vw;
         font-weight: 600;
         text-shadow: 0px 0px 20px #000000;
     }
 
     h2{
         font-size: 1.8vw;
+        text-transform: uppercase;
         color: #ffffff;
         text-shadow: 0px 0px 20px #000000;
     }
@@ -103,7 +105,7 @@
         font-size: 3vmax;
 
         .fibra{
-            font-size: 4vw;
+            font-size: 2vw;
             font-weight: 600;
             text-shadow: 0px 0px 20px #000000;
         }
