adicionei as fontes novas

--- a/src/components/ContactGeneric/styles.module.scss
+++ b/src/components/ContactGeneric/styles.module.scss
@@ -5,9 +5,7 @@
     display: flex;
     overflow: hidden;
     flex-direction: row;
-    background-image: url("../../assets/imageteste.jpeg");
-    background-size:cover;
-    object-fit: cover;
+    width: 1200px;
 }
 
 .imagefundo{
@@ -31,8 +29,6 @@
 .button{
     display: flex;
     align-items: center;
-    width: 100%;
-    height: 100%;
     justify-content: center;
     
     a{
@@ -43,6 +39,7 @@
         display: flex;
         align-items: center;
         gap: 0.5vw;
+        color: white;
     }
 }
 
@@ -51,7 +48,7 @@
     flex-direction: column;
     overflow: hidden;
     background-color: #0000006e;
-    width: 23.91vw;
+    width: 40vw;
     z-index: 1;
     position: relative;
 }
@@ -60,11 +57,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 3vh;
+    gap: 5vh;
     width: fit-content;
     justify-content: center;
-    padding: 50px 100px 50px 100px;
+    padding: 50px 40px 50px 40px;
     background-color: rgb(255, 255, 255);
+    min-height: 70vh;
+    color: rgb(0, 0, 0);
 }
 .box{
     display: flex;
@@ -76,21 +75,23 @@
     z-index: 3;
 
     h1{
-        font-size: 1.81vw;
+        font-size: 2.3vw;
         line-height: 120%;
-        font-weight: 600;
+        font-weight: 500;
         text-shadow: 1px 1px 8px black;
         text-transform: uppercase;
         
     }
     h2{
         text-shadow: 1px 1px 8px black;
+        font-size: 1.5vw;
+        font-weight: 500;
     }
     h3{
-        font-size: 0.97vw;
+        font-size: 1.3vw;
         line-height: 113%;
         text-shadow: 1px 1px 8px black;
-        font-weight: 600;
+        font-weight: 500;
     }
 }
 
@@ -145,6 +146,30 @@
         border: none;
     }
 }
+.boxleft{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2vh;
+}
+
+.desc{
+    font-size: 1.6vw;
+}
+
+.boxdetails{
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+    padding-left: 20px;
+}
+.details{
+    font-size: 1vw;
+    text-align: justify;
+}
+
+
 .boxform{
     display: flex;
     flex-direction: row;
