--- a/src/components/PlanCard/PlanCard.module.scss
+++ b/src/components/PlanCard/PlanCard.module.scss
@@ -63,13 +63,15 @@
         font-size: 1.8vw;
         text-transform: uppercase;
         color: #ffffff;
+        font-family: "Albert";
+        font-weight: 600;
         text-shadow: 0px 0px 20px #000000;
     }
 
     span{
         color: rgb(255, 255, 255);
         font-size: 1.4vw;
-        font-weight: 600;
+        font-weight: 500;
         text-shadow: 0px 0px 20px #000000;
     }
 
@@ -105,7 +107,7 @@
         font-size: 3vmax;
 
         .fibra{
-            font-size: 2vw;
+            font-size: 4vw;
             font-weight: 600;
             text-shadow: 0px 0px 20px #000000;
         }
