--- a/src/components/Front/styles.module.scss
+++ b/src/components/Front/styles.module.scss
@@ -64,6 +64,7 @@
 
     span{
         margin-right: 0.5vw;
+        line-height: 0%;
         width: fit-content;
         height: fit-content;
         text-align: center;
