--- a/src/pages/Planos/styles.module.scss
+++ b/src/pages/Planos/styles.module.scss
@@ -60,6 +60,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-shadow: 2px 2px 15px black;
   backdrop-filter: blur(5px);
   background-color: #00000049;
 width: 100vw; /* 973px convertido */
