edições feitas no section

--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -57,7 +57,7 @@
   
   .description {
     font-size: 1vw; /* 20px convertido */
-    font-weight: bold;
+    font-weight: normal;
     margin-bottom: 3vh;
     margin-top: 0;
     text-shadow: 0.1vw 0.1vw 0.5vw black; /* sombras convertidas */
