--- a/src/components/ContactGeneric/styles.module.scss
+++ b/src/components/ContactGeneric/styles.module.scss
@@ -1,5 +1,17 @@
 @import "../../variables/colors";
 
+.home {
+    video {
+        width: 100vw;
+        height: 100vh;
+        position: absolute;
+        object-fit: cover;
+        z-index: -1;
+    }
+    backdrop-filter: blur(5px);
+    background-color: #00000049;
+  }
+
 .ContactGeneric{
     position: relative;
     display: flex;
@@ -95,12 +107,14 @@
         font-weight: 500;
         text-shadow: 1px 1px 8px black;
         text-transform: uppercase;
+        font-family: "Rubik";
         
     }
     h2{
         text-shadow: 1px 1px 8px black;
         font-size: 1.5vw;
         font-weight: 500;
+        font-family: "Rubik";
     }
     h3{
         font-size: 1.3vw;
