--- a/src/components/PlanCard/PlanCard.module.scss
+++ b/src/components/PlanCard/PlanCard.module.scss
@@ -54,25 +54,27 @@
     padding: 1.5vw;
 
     .fibra{
-        font-size: 0.8vw;
+        font-size: 1vw;
         font-weight: 600;
         text-shadow: 0px 0px 20px #000000;
+        font-family: "Albert";
     }
 
     h2{
         font-size: 1.8vw;
         text-transform: uppercase;
         color: #ffffff;
-        font-family: "Albert";
-        font-weight: 600;
+        font-family: "Rubik";
+        font-weight: 400;
         text-shadow: 0px 0px 20px #000000;
     }
 
     span{
         color: rgb(255, 255, 255);
         font-size: 1.4vw;
-        font-weight: 500;
+        font-weight: 400;
         text-shadow: 0px 0px 20px #000000;
+        font-family: "Rubik";
     }
 
 }
