--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -6,6 +6,8 @@
       object-fit: cover;
       z-index: -1;
   }
+  backdrop-filter: blur(5px);
+  background-color: #00000049;
 }
   .mainContent {
     position: relative;
@@ -50,9 +52,15 @@
   }
   
   .mainHeading {
-    font-size: 2.5vw; /* 48px convertido */
+    font-size: 3vw; /* 48px convertido */
     margin-top: 2vh; /* 20px convertido */
-    margin-bottom: 2.2vh; /* 10px convertido */
+    margin-bottom: 0.3vh; /* 10px convertido */
+  }
+
+  .subtitle{
+    margin-top: 0px;
+    margin-bottom: 2vh;
+    font-size: 1.8vw; /* 48px convertido */
   }
   
   .description {
