--- a/src/pages/Sobre/styles.module.scss
+++ b/src/pages/Sobre/styles.module.scss
@@ -5,7 +5,11 @@
       position: absolute;
       object-fit: cover;
       z-index: -1;
+
   }
+  backdrop-filter: blur(5px);
+  background-color: #00000049;
+
 }
 
 .mainContent {
@@ -28,11 +32,9 @@
   gap: 2.5vh; /* 10px convertido */
   gap: 2.5vh; /* 10px convertido */
   justify-content: start;
-  background-color: #00000049;
   flex-wrap: wrap;
   margin: auto 0;/* 80px e 37px convertidos */
-  backdrop-filter: blur(5px);
-    width: 100vw; /* 973px convertido */
+  width: 100vw; /* 973px convertido */
 }
 
 .sobreMenu{
@@ -67,6 +69,10 @@
   color: #ffffff;
   font-weight: 700;
   justify-content: start;
+  backdrop-filter: blur(30px);
+  background-color: #00000057;
+  padding: 2vw;
+  border-radius: 10px;
   margin: auto 0;
   gap: 2vw;
 }
@@ -112,7 +118,7 @@
 
 .boxtext{
   height: 100%;
-  width: 30vw;
+  width: 40vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -120,7 +126,7 @@
 
 .boxtext2{
     height: 100%;
-    width: 40vw;
+    width: 60vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -167,6 +173,7 @@
 
 .pageContent{
     display: flex;
+    height: 60vh;
 }
 .columncard{
     margin-top: 2vh;
