--- a/src/components/ContactGeneric/styles.module.scss
+++ b/src/components/ContactGeneric/styles.module.scss
@@ -92,6 +92,20 @@
     min-height: 70vh;
     color: rgb(0, 0, 0);
 }
+
+.Secondsection2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5vh;
+    width: fit-content;
+    justify-content: center;
+    padding: 50px 40px 50px 40px;
+    background-color: rgb(226, 226, 226);
+    min-height: 70vh;
+    color: rgb(0, 0, 0);
+}
+
 .box{
     display: flex;
     flex-grow: 1;
