--- a/src/components/Front/styles.module.scss
+++ b/src/components/Front/styles.module.scss
@@ -77,6 +77,25 @@ a{
     text-decoration: none;
 }
 
+.navbar{
+    color: white;
+    font-family: "Nunito";
+    font-weight: 600;
+    display: flex;
+    flex-direction: row;
+    font-size: 1vw;
+    gap: 3vw;
+
+    a{
+        transition: 0.2s;
+        cursor: pointer;
+    }
+
+    a:hover{
+        color: #e8e120;
+    }
+}
+
 @media (max-width:1024px) {
     .front{
         position: relative;
