--- a/src/pages/Sobre/styles.module.scss
+++ b/src/pages/Sobre/styles.module.scss
@@ -8,7 +8,7 @@
 
   }
   backdrop-filter: blur(5px);
-  background-color: #00000049;
+  background-color: #0000005e;
 
 }
 
@@ -93,6 +93,8 @@
   font-size: 2.5vw; /* 48px convertido */
   margin-top: 0; /* 20px convertido */
   margin-bottom: 0;
+  font-family: "BDSans";
+  letter-spacing: -5%;
 }
 
 .description {
@@ -102,6 +104,8 @@
   text-align: justify;
   margin-top: 0;
   text-shadow: 0.1vw 0.1vw 0.4vw black; /* sombras convertidas */
+  font-family: "Nunito";
+  line-height: 120%;
 }
 
 .boxDescriptions{
@@ -167,6 +171,8 @@
     margin: 0;
     font-weight: 500;
     font-size: 1.4vw;
+    font-family: "BDSans";
+    letter-spacing: -5%;
   }
   margin-bottom: 2.5vh;
 }
@@ -201,11 +207,12 @@
 
     h3{
         margin: 0px;
-        text-shadow: 0.1vw 0.1vw 0.3vw #4b2400; /* sombras convertidas */
-        color: #ff8615;
+        text-shadow: 0.0vw 0.0vw 0.2vw #fff70042; /* sombras convertidas */
+        color: #e8e120;
 
     }
     p{
         margin: 0px;
+        font-weight: 500;
     }
 }
