--- a/src/pages/Planos/styles.module.scss
+++ b/src/pages/Planos/styles.module.scss
@@ -64,6 +64,7 @@
   align-items: center;
   text-shadow: 2px 2px 15px black;
   backdrop-filter: blur(5px);
+  font-family: "BDSans";
   background-color: #00000049;
 width: 100vw; /* 973px convertido */
 }
