--- a/src/components/PlanCard/PlanCard.module.scss
+++ b/src/components/PlanCard/PlanCard.module.scss
@@ -61,11 +61,11 @@
     }
 
     h2{
-        font-size: 1.8vw;
+        font-size: 1.6vw;
         text-transform: uppercase;
         color: #ffffff;
-        font-family: "Rubik";
-        font-weight: 400;
+        font-family: "Nunito";
+        font-weight: 600;
         text-shadow: 0px 0px 20px #000000;
     }
 
@@ -74,7 +74,7 @@
         font-size: 1.4vw;
         font-weight: 400;
         text-shadow: 0px 0px 20px #000000;
-        font-family: "Rubik";
+        font-family: "Nunito";
     }
 
 }
@@ -94,6 +94,7 @@
 .options{
     margin-top: 2vh;
     margin-left: 1vw;
+    font-family: "Nunito";
 }
 
 @media (max-width: 1024px) {
@@ -119,6 +120,7 @@
             font-size: 7vw;
             color: #ffffff;
             text-shadow: 0px 0px 20px #000000;
+        
         }
     
         span{
